--- a/Customer_service/Customer_service/Web.config
+++ b/Customer_service/Customer_service/Web.config
@@ -73,7 +73,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="dotnetEntities" connectionString="metadata=res://*/Areas.administrateur.Models.Model1.csdl|res://*/Areas.administrateur.Models.Model1.ssdl|res://*/Areas.administrateur.Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SRCJO5D;initial catalog=dotnet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="dotnetEntities1" connectionString="metadata=res://*/Models.entities.csdl|res://*/Models.entities.ssdl|res://*/Models.entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SRCJO5D;initial catalog=dotnet;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
